ran unique checks

--- a/csv_files/csv-check.ipynb
+++ b/csv_files/csv-check.ipynb
@@ -28,7 +28,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining function to check uniqueness of columns\n",
+    "def unique_check(column):\n",
+    "    if len(column) == len(column.unique()):\n",
+    "        print('This column contains unique values.')\n",
+    "    else:\n",
+    "        print('This column does not contain unique values.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Department Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +116,7 @@
        "4    d005      Development"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +127,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This column contains unique values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_check(dept_df.dept_no)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Department Employment Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +230,7 @@
        "4   10005    d003  1989-09-12  9999-01-01"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,6 +238,30 @@
    "source": [
     "dept_emp_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This column does not contain unique values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_check(dept_emp_df.emp_no)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -283,6 +352,30 @@
    "source": [
     "dept_manager_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This column contains unique values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_check(dept_manager_df.emp_no)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -388,6 +481,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This column contains unique values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_check(employees_df.emp_no)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -478,6 +595,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This column contains unique values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_check(salaries_df.emp_no)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -564,6 +705,23 @@
    ],
    "source": [
     "titles_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This column does not contain unique values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_check(titles_df.emp_no)"
    ]
   },
   {
