--- a/csv_files/csv-check.ipynb
+++ b/csv_files/csv-check.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Department Table"
+    "### Department"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Department Employment Data"
+    "### Department Employment"
    ]
   },
   {
@@ -257,11 +257,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Department Manager"
+   ]
   },
   {
    "cell_type": "code",
@@ -371,11 +371,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Employees"
+   ]
   },
   {
    "cell_type": "code",
@@ -497,11 +497,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Salaries"
+   ]
   },
   {
    "cell_type": "code",
@@ -611,11 +611,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Titles"
+   ]
   },
   {
    "cell_type": "code",
