--- a/EmployeeSQL/sqlalchemy-bonus.ipynb
+++ b/EmployeeSQL/sqlalchemy-bonus.ipynb
@@ -606,7 +606,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "salary"
+   ]
   }
  ],
  "metadata": {
