--- a/EmployeeSQL/sqlalchemy-bonus.ipynb
+++ b/EmployeeSQL/sqlalchemy-bonus.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4   10005   78228  1989-09-12  1990-09-12"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,12 +603,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>from_date_x</th>\n",
+       "      <th>to_date_x</th>\n",
+       "      <th>title</th>\n",
+       "      <th>from_date_y</th>\n",
+       "      <th>to_date_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>60117</td>\n",
+       "      <td>1986-06-26</td>\n",
+       "      <td>1987-06-26</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1986-06-26</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>65828</td>\n",
+       "      <td>1996-08-03</td>\n",
+       "      <td>1997-08-03</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>1996-08-03</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>40006</td>\n",
+       "      <td>1995-12-03</td>\n",
+       "      <td>1996-12-02</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1995-12-03</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>40054</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>1987-12-01</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>1995-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>40054</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>1987-12-01</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1995-12-01</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no  salary from_date_x   to_date_x            title from_date_y  \\\n",
+       "0   10001   60117  1986-06-26  1987-06-26  Senior Engineer  1986-06-26   \n",
+       "1   10002   65828  1996-08-03  1997-08-03            Staff  1996-08-03   \n",
+       "2   10003   40006  1995-12-03  1996-12-02  Senior Engineer  1995-12-03   \n",
+       "3   10004   40054  1986-12-01  1987-12-01         Engineer  1986-12-01   \n",
+       "4   10004   40054  1986-12-01  1987-12-01  Senior Engineer  1995-12-01   \n",
+       "\n",
+       "    to_date_y  \n",
+       "0  9999-01-01  \n",
+       "1  9999-01-01  \n",
+       "2  9999-01-01  \n",
+       "3  1995-12-01  \n",
+       "4  9999-01-01  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge salary and title dataframes\n",
+    "salary_title_df = salaries_df.merge(titles_df, on = 'emp_no')\n",
+    "salary_title_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "Assistant Engineer    48493.204786\n",
+       "Engineer              48539.781423\n",
+       "Manager               51531.041667\n",
+       "Senior Engineer       48506.751806\n",
+       "Senior Staff          58503.286614\n",
+       "Name: salary, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by title and calculate mean\n",
+    "salary_title_group = salary_title_df.groupby(by = 'title')\n",
+    "avg_salary_by_title = salary_title_group['salary'].mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "Assistant Engineer    48493.204786\n",
+       "Engineer              48539.781423\n",
+       "Manager               51531.041667\n",
+       "Senior Engineer       48506.751806\n",
+       "Senior Staff          58503.286614\n",
+       "Staff                 58465.271904\n",
+       "Technique Leader      48580.505772\n",
+       "Name: salary, dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print results\n",
+    "avg_salary_by_title.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "salary"
-   ]
+   "source": []
   }
  ],
  "metadata": {
